[package]
name = "rustprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
ipnet = "2.11.0"
pnet = "0.34"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-native-tls = "0.3.1"
wasmtime = "30.0.2"
directories = "5.0"
indicatif = "0.17"

[target.'cfg(unix)'.dependencies]
nix = "0.28"
